--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .top-menu {
     justify-content: space-between;
-    padding-top: 10px;
+    padding-top: 20px;
     padding-bottom: 10px;
 }
 
@@ -34,6 +34,31 @@ ul {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+}
+
+.sec2 ul {
+    list-style: none;
+    display: flex;
+    gap: 30px;
+    font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+
+li {
+    text-align: center;
+}
+
+li p {
+    text-align: justify;
+    width: 160px;
+    font-size: small;
+    font-family: 'Roboto',sans-serif;
+    font-weight: 200;
 }
 
 a {
@@ -61,10 +86,10 @@ h2 {
 
 h3 {
     color: #1f2937;
-    font-size: 40px;
+    font-size: 20px;
     font-weight: bolder;
     font-family: 'Roboto', sans-serif;
-    margin: 0;  
+    margin: 26px 0;  
 }
 
 button {
@@ -83,22 +108,24 @@ button {
 .sec1 p {
     color: #e5e7eb;
     font-size: 18px;
-    font-weight: normal;
+    font-weight: 300;
     font-family: 'Roboto', sans-serif;
-    margin: 0;
+    margin: 12px 0;
 }
 
 .thumbnail{
-    width: 100px;
-    height:100px;
+    width: 160px;
+    height: 160px;
 }
 
 .sec2 {
-    padding: 0 10%;
+    padding: 0 20%;
+    padding-top: 0;
+    padding-bottom: 100px;
 }
 
 .sec3 {
-    padding: 0 10%;
+    padding: 100px 20%;
     background-color: #e5e7eb;
 }
 
@@ -116,7 +143,7 @@ p {
     font-weight: lighter;
     font-family: 'Roboto', sans-serif;
     font-style: italic;
-    margin: 0;
+    margin-top: 0;
 }
 
 .author {
@@ -135,4 +162,23 @@ p {
     font-family: 'Roboto', sans-serif;
     margin: auto;
     text-align: center;
+}
+
+.signup {
+    background-color: #3882F6;
+    display:flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.signup p {
+    font-weight: normal;
+    color: #e5e7eb;
+    padding: 20px 60px;
+    margin: 30px;
+    
+}
+
+.signup button {
+    border-color: #e5e7eb;
 }
