--- a/style.css
+++ b/style.css
@@ -168,17 +168,34 @@ p {
     background-color: #3882F6;
     display:flex;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
+    padding: 25px;
+    gap: 30px;
 }
 
-.signup p {
+.signup div {
     font-weight: normal;
     color: #e5e7eb;
-    padding: 20px 60px;
-    margin: 30px;
     
+        
 }
 
 .signup button {
     border-color: #e5e7eb;
+}
+
+.sec4 {
+    padding: 100px 20%;
+}
+
+.footer p {
+    color: #e5e7eb;
+    font-weight: 300;
+    font-size: small;
+    text-align: center;
+}
+
+.footer {
+    background-color: #1f2937;
+    padding: 16px 0;
 }
