--- a/style.css
+++ b/style.css
@@ -171,11 +171,13 @@ p {
     align-items: center;
     padding: 25px;
     gap: 30px;
+    border-radius: 6px;
 }
 
 .signup div {
     font-weight: normal;
     color: #e5e7eb;
+    
     
         
 }
